added 'withTotalCount' switch to query settings
